<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    style="@style/ActivityStyle"
    tools:context=".SmoothActivity">

    <FrameLayout
        android:id="@+id/canvas_layout"
        android:layout_width="360dp"
        android:layout_height="360dp">
        <com.example.martinrgb.roundconrner.smoothcorners.SketchSmoothCorners
            android:id="@+id/sketchsmoothcorners"
            style="@style/CanvasStyle"/>
    </FrameLayout>



    <LinearLayout
        android:id="@+id/ui_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/annotation_layout"
            style="@style/AnnotationMainLayout">
            <RelativeLayout
                style="@style/AnnotationSubLayout">
                <ImageView
                    style="@style/AnnotationColorView"
                    android:background="@color/appRed"/>
                <TextView
                    android:id="@+id/black_text"
                    android:text="@string/annotation_sketch_smooth_3"
                    style="@style/AnnotationText"/>
            </RelativeLayout>
            <RelativeLayout
                style="@style/AnnotationSubLayout">
                <ImageView
                    style="@style/AnnotationColorView"
                    android:background="@color/appDark"/>
                <TextView
                    android:id="@+id/conclusion_text"
                    android:text="@string/annotation_conclusion_2"
                    style="@style/AnnotationText"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/control_layout"
            style="@style/CustomControlLayout"
            android:layout_weight="1">
            <LinearLayout
                style="@style/CustomCheckBoxLayout">
                <CheckBox
                    style="@style/MainCheckbox"
                    android:id="@+id/tl_check"
                    android:text="tl"/>
                <CheckBox
                    style="@style/MainCheckbox"
                    android:id="@+id/tr_check"
                    android:text="tr"/>
                <CheckBox
                    style="@style/MainCheckbox"
                    android:id="@+id/bl_check"
                    android:text="bl"/>
                <CheckBox
                    style="@style/MainCheckbox"
                    android:id="@+id/br_check"
                    android:text="br"/>
                <CheckBox
                    style="@style/AlertNativeCheckbox"
                    android:id="@+id/ratio_check"
                    android:text="isSquare"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:id="@+id/width"
                    android:progress="37"
                    style="@style/CustomSeekbar"/>
                <TextView
                    android:id="@+id/width_text"
                    android:text="@string/width_text"
                    style="@style/SeekbarText"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:id="@+id/height"
                    android:progress="37"
                    style="@style/CustomSeekbar"/>
                <TextView
                    android:id="@+id/height_text"
                    android:text="@string/height_text"
                    style="@style/SeekbarText"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:id="@+id/radius"
                    android:progress="50"
                    style="@style/CustomSeekbar"/>
                <TextView
                    android:id="@+id/radius_text"
                    android:text="@string/radius_text"
                    style="@style/SeekbarText"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>